  * apt/cache.py: Provide broken_count, delete_count, install_count, keep_count
    properties (Closes: #532338)
  * apt/cache.py: Correctly handle rootdir on second and later invocations of
    open() (LP: #320665).
  * Add apt_pkg.DepCache.mark_auto() and apt.Package.mark_auto() methods to
    mark a package as automatically installed.

  [ Sebastian Heinlein ]
  * apt/progress.py: Extract the package name from the status message
    (Closes: #532660)

  [ Stephan Peijnik ]
  * apt/progress/__init__.py:
    - add update_status_full() that takes file_size/partial_size as
      additional callback arguments
    - add pulse_items() that takes a addtional "items" tuple that
      gives the user full access to the individual items that are
      fetched
  * python/progress.cc:
    - low level code for update_status_full and pulse_items()

 -- Julian Andres Klode <jak@debian.org>  Mon, 22 Jun 2009 14:38:19 +0200

python-apt (0.7.91) experimental; urgency=low

  [ Julian Andres Klode ]
  * Rename where needed according to PEP 8 conventions (Closes: #481061)
  * Where possible, derive apt.package.Record from collections.Mapping.
  * ActionGroups can be used as a context manager for the 'with' statement.
  * utils/migrate-0.8.py: Helper to check Python code for deprecated functions,
    attributes,etc. Has to be run from the python-apt source tree, but can be
    used for all Python code using python-apt.
  * debian/control: Only recommend libjs-jquery (Closes: #527543).

  [ Stefano Zacchiroli ]
  * debian/python-apt.doc-base: register the documentation with the
    doc-base system (Closes: #525134)

  [ Sebastian Heinlein ]
  * apt/package.py: Add Package.get_version() which returns a Version instance
    for the given version string or None (Closes: #523998)

 -- Julian Andres Klode <jak@debian.org>  Fri, 05 Jun 2009 19:36:45 +0200

python-apt (0.7.90) experimental; urgency=low

  * Introduce support for Python 3 (Closes: #523645)
